--- a/6.3-TUTORIAL.md
+++ b/6.3-TUTORIAL.md
@@ -1,22 +1,41 @@
-##DVWA — SQL Injection Tutorial
-##Author: Alassane Camara
-##Course: CSN190
-##Assignment: 6.3 — Work with Your GitHub Software and Create Tutorial
-##Date: 11-11-25
-##1. Introduction
-This tutorial demonstrates a basic SQL injection against the Damn Vulnerable Web Application. We will run DVWA locally using Docker, set the security level to Low, submit a simple SQL injection payload “1' OR '1'='1” into the SQL Injection page, and observe the application return multiple database rows. This shows how un-sanitized user inputs can allow attackers to bypass query filters and extract data, an essential concept in web security learning.
-##2. Prerequisites
-#o	Docker Desktop for Windows (running)
-#o	Git
-#o	Visual Studio Code 
-##3. Step-by-Step Instructions
-#Step 0 — Clone the DVWA repository
-#1.	Create a folder (example mine is CSN190)
-#2.	Copy the repository URL (it should look like: https://github.com/digininja/DVWA
+# DVWA — SQL Injection Tutorial
+
+**Author:** Alassane Camara  
+**Course:** CSN190  
+**Assignment:** 6.3 — Work with Your GitHub Software and Create Tutorial  
+**Date:** 11-11-25  
+
+---
+
+## 1. Introduction  
+
+This tutorial demonstrates a basic SQL injection against the Damn Vulnerable Web Application (DVWA).  
+We will run DVWA locally using Docker, set the security level to **Low**, submit a simple SQL injection payload `1' OR '1'='1` into the SQL Injection page, and observe the application return multiple database rows.  
+This shows how un-sanitized user inputs can allow attackers to bypass query filters and extract data — an essential concept in web security learning.  
+
+---
+
+## 2. Prerequisites  
+
+- Docker Desktop for Windows (running)  
+- Git  
+- Visual Studio Code  
+
+---
+
+## 3. Step-by-Step Instructions  
+
+### Step 0 — Clone the DVWA repository  
+
+1. Create a folder (example: `CSN190`)  
+2. Copy the repository URL:  
+: https://github.com/digininja/DVWA
 #3.	Open VS Code
 #4.	Open Terminal in VS Code
 #5.	Navigate to your folder
 #6.	Clone the repository 
+
+
 Screenshot: DVWA repository cloned into CSN190.
 <img width="1920" height="1020" alt="Screenshot 1 — 01_clone_repo" src="https://github.com/user-attachments/assets/91d145b8-0b11-4ffa-a0d8-acad57986d31" />
  
