--- a/6.3-TUTORIAL.md
+++ b/6.3-TUTORIAL.md
@@ -30,10 +30,10 @@ This shows how un-sanitized user inputs can allow attackers to bypass query filt
 1. Create a folder (example: `CSN190`)  
 2. Copy the repository URL:  
 : https://github.com/digininja/DVWA
-#3.	Open VS Code
-#4.	Open Terminal in VS Code
-#5.	Navigate to your folder
-#6.	Clone the repository 
+3.	Open VS Code
+4.	Open Terminal in VS Code
+5.	Navigate to your folder
+6.	Clone the repository 
 
 
 Screenshot: DVWA repository cloned into CSN190.
