--- a/6.3-TUTORIAL.md
+++ b/6.3-TUTORIAL.md
@@ -40,7 +40,7 @@ Screenshot: DVWA repository cloned into CSN190.
 <img width="1920" height="1020" alt="Screenshot 1 — 01_clone_repo" src="https://github.com/user-attachments/assets/91d145b8-0b11-4ffa-a0d8-acad57986d31" />
  
 
-###Step 1 — Start DVWA with Docker Compose
+##Step 1 — Start DVWA with Docker Compose
 1.	In the DVWA folder run:
 2.	docker-compose up -d
 3.	Verify containers are running (docker ps) or confirm in Docker Desktop.
@@ -79,8 +79,8 @@ Screenshot: Multiple user rows returned — SQL injection success
 4. Expected Results
 If the injection works, the SQL query is evaluated as always true and returns all rows. You should see multiple user entries listed in red this proves input was not sanitized and the app is vulnerable.
 5. Troubleshooting
-•	No output / blank page → Make sure DB is initialized (Setup / Reset DB).
-•	Payload sanitized / no rows → Verify security level is set to Low.
-•	Docker fails to start → Restart Docker Desktop, check container logs (docker-compose logs web).
+- No output / blank page → Make sure DB is initialized (Setup / Reset DB).
+-	Payload sanitized / no rows → Verify security level is set to Low.
+-	Docker fails to start → Restart Docker Desktop, check container logs (docker-compose logs web).
 6. Conclusion
 This lab shows how a simple SQL injection payload can return sensitive data from a database when inputs are not sanitized. It’s an essential hands-on demonstration for beginners to understand the importance of parameterized queries and input validation. 
